--- a/torch/multilayer_ Torch.ipynb
+++ b/torch/multilayer_ Torch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b55d4831-92cc-4a18-b043-ac8a95592d1c",
    "metadata": {},
    "outputs": [],
@@ -19,28 +19,18 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
+    "import sys\n",
+    "parent_dir = os.path.abspath('..')\n",
+    "sys.path.insert(0, parent_dir)\n",
     "from utils.helper import fn_plot_torch_hist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2a97a8e4-f3e0-47e3-adf2-3b3198b7fbc5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m RANDOM_STATE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m24\u001b[39m\n\u001b[0;32m     13\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mRandomState(seed \u001b[38;5;241m=\u001b[39m RANDOM_STATE)\n\u001b[1;32m---> 14\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mset_seed(RANDOM_STATE) \u001b[38;5;66;03m# set_seed in tf\u001b[39;00m\n\u001b[0;32m     15\u001b[0m rng\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mdefault_rng(seed\u001b[38;5;241m=\u001b[39m RANDOM_STATE)\n\u001b[0;32m     17\u001b[0m ALPHA \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.1\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###------------------------------\n",
     "### global variables\n",
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0f09f2d6-74ab-441f-9c4d-97c3f3243d18",
    "metadata": {},
    "outputs": [],
@@ -92,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "058b2fe5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1000, 2), (1000,))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X, y = datasets.make_moons(n_samples = N_SAMPLE, # n_samples: how many datasets in it\n",
     "                          noise = NOISE, # peportion of randommness added to data so that it matched to real life data , without noise it becomes perfect half circle in moon dataset\n",
@@ -106,10 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d727602b-e925-48d6-9536-d533d544dad1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((800, 2), (200, 2), (800,), (200,))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test=   train_test_split(X,y , random_state= RANDOM_STATE, stratify=y, test_size= TEST_SIZE)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
@@ -117,20 +129,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "09159bbe-249f-4708-aed3-5758f4762682",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.cuda.is_available()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "aa5d4483-ef7c-47ec-9e09-dd9b4c629032",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "device # manually set device in pytorch "
@@ -146,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "39661eaf-6ee7-4245-a1f4-cedfb3430658",
    "metadata": {},
    "outputs": [],
@@ -169,17 +203,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "adff5879-b8e2-4afc-af8c-a3d5afe26584",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=2, out_features=5, bias=True)\n",
+       "  (1): ReLU()\n",
+       "  (2): Linear(in_features=5, out_features=5, bias=True)\n",
+       "  (3): ReLU()\n",
+       "  (4): Linear(in_features=5, out_features=4, bias=True)\n",
+       "  (5): ReLU()\n",
+       "  (6): Linear(in_features=4, out_features=3, bias=True)\n",
+       "  (7): ReLU()\n",
+       "  (8): Linear(in_features=3, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "144c567a-4dd2-4556-8c28-425c29451467",
    "metadata": {},
    "outputs": [],
@@ -197,10 +252,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9e286a81-5660-48df-bce1-8f54118425a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2.1581, -0.2587],\n",
+       "        [-0.2726,  1.0721],\n",
+       "        [-1.0524,  0.4215],\n",
+       "        ...,\n",
+       "        [ 1.0922, -0.6233],\n",
+       "        [ 0.7624, -0.4503],\n",
+       "        [ 0.9277,  0.1778]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_X"
    ]
@@ -224,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d0e190f7-ae54-461f-be90-f4406e98197c",
    "metadata": {},
    "outputs": [],
@@ -249,20 +321,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05f531b3-c368-4f2e-b318-1071d1ee7653",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "854b47d8-8a48-412e-b367-1a2989f22d8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0,\n",
+       "       0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0,\n",
+       "       0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0,\n",
+       "       0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1,\n",
+       "       0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1,\n",
+       "       0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1,\n",
+       "       0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1,\n",
+       "       1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0,\n",
+       "       1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1,\n",
+       "       1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1,\n",
+       "       0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1,\n",
+       "       1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 1, 0, 1, 1, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output = model(train_X)\n",
     "y_pred = torch.argmax(output, dim = 1).cpu().numpy()#dim is like axis in dataframe, .cpu()  moves to cpu, converted to numpy\n",
@@ -271,10 +380,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f1f6ab90-5815-4147-b62b-88045adb128a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98       400\n",
+      "           1       0.98      0.98      0.98       400\n",
+      "\n",
+      "    accuracy                           0.98       800\n",
+      "   macro avg       0.98      0.98      0.98       800\n",
+      "weighted avg       0.98      0.98      0.98       800\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(train_y.cpu().numpy(), y_pred))"
@@ -282,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f63e467d-434f-492e-b9ab-106555d94b9a",
    "metadata": {},
    "outputs": [],
@@ -304,10 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9a9b43ac-0fbc-4089-a581-1eefe6a9b877",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:     0 |Loss: 0.69551/0.69461 | ACC:  0.50000/ 0.50000\n",
+      "Epoch:   500 |Loss: 0.33467/0.34411 | ACC:  0.86875/ 0.87000\n",
+      "Epoch:  1000 |Loss: 0.16568/0.17890 | ACC:  0.96000/ 0.95500\n",
+      "Epoch:  1500 |Loss: 0.08454/0.12992 | ACC:  0.98125/ 0.95500\n"
+     ]
+    }
+   ],
    "source": [
     "### defining loss function\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
@@ -358,17 +494,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f942d909-c2a0-4658-a167-9f9923ef73bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(n_epoch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "59d40931-100d-4cc0-ba49-59b8c19223ec",
    "metadata": {
     "scrolled": true
@@ -384,10 +531,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b963587b-1a0e-42fb-a589-e29cd447c4f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>test_loss</th>\n",
+       "      <th>acc</th>\n",
+       "      <th>test_Acc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.695515</td>\n",
+       "      <td>0.694606</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.695138</td>\n",
+       "      <td>0.694234</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.694768</td>\n",
+       "      <td>0.693871</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.694404</td>\n",
+       "      <td>0.693515</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.694046</td>\n",
+       "      <td>0.693162</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.071093</td>\n",
+       "      <td>0.124872</td>\n",
+       "      <td>0.98250</td>\n",
+       "      <td>0.955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>0.071084</td>\n",
+       "      <td>0.124825</td>\n",
+       "      <td>0.98250</td>\n",
+       "      <td>0.955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.071063</td>\n",
+       "      <td>0.124586</td>\n",
+       "      <td>0.98375</td>\n",
+       "      <td>0.955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.071045</td>\n",
+       "      <td>0.124290</td>\n",
+       "      <td>0.98375</td>\n",
+       "      <td>0.955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.071035</td>\n",
+       "      <td>0.124394</td>\n",
+       "      <td>0.98375</td>\n",
+       "      <td>0.955</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      epoch      loss  test_loss      acc  test_Acc\n",
+       "0         0  0.695515   0.694606  0.50000     0.500\n",
+       "1         1  0.695138   0.694234  0.50000     0.500\n",
+       "2         2  0.694768   0.693871  0.50000     0.500\n",
+       "3         3  0.694404   0.693515  0.50000     0.500\n",
+       "4         4  0.694046   0.693162  0.50000     0.500\n",
+       "...     ...       ...        ...      ...       ...\n",
+       "1995   1995  0.071093   0.124872  0.98250     0.955\n",
+       "1996   1996  0.071084   0.124825  0.98250     0.955\n",
+       "1997   1997  0.071063   0.124586  0.98375     0.955\n",
+       "1998   1998  0.071045   0.124290  0.98375     0.955\n",
+       "1999   1999  0.071035   0.124394  0.98375     0.955\n",
+       "\n",
+       "[2000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hist_df"
    ]
