--- a/1hiddenLayer-alpha01.ipynb
+++ b/1hiddenLayer-alpha01.ipynb
@@ -603,7 +603,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "44dc5b9a-e281-4a6e-a70a-2f6ba66f5bbb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
